@@ -1,3 +1,8 @@
+2003-09-29  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.[ch]:
+	Add an error signal for reporting errors.
+
 2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* src/sj-extracting.c: (on_extract_activate):
